--- a/recycling/templates/recycling/index.html
+++ b/recycling/templates/recycling/index.html
@@ -134,7 +134,7 @@
          <!-- slider section -->
          <section class="slider_section ">
             <div class="slider_bg_box">
-               <img src="{% static 'recycling/images/slider-bg.jpg' %}" alt="">
+               <img src="{% static 'recycling/images/bg2.webp' %}" alt="">
             </div>
             <div id="customCarousel1" class="carousel slide" data-ride="carousel">
                <div class="carousel-inner">
