--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -33,7 +33,7 @@
 			<div class="wrap-login100">
 				<form class="login100-form validate-form p-l-55 p-r-55 p-t-178" method="post">
 					<span class="login100-form-title">
-						Welcome | Register
+						Welcome | Create an account
 					</span>
 					{% csrf_token %}
 					<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
@@ -58,7 +58,7 @@
 					<br/>
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Register
+							Create account
 						</button>
 					</div>
 
