fixing auth problem

--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -27,7 +27,21 @@
 <!--===============================================================================================-->
 </head>
 <body>
-	
+	    {% if messages %}
+        <div id="messages">
+            {% for message in messages %}
+                <div 
+                    style="background-color: {% if message.tags == 'error' %}#f8d7da{% elif message.tags == 'success' %}#d4edda{% else %}#cce5ff{% endif %}; 
+                           color: {% if message.tags == 'error' %}#721c24{% elif message.tags == 'success' %}#155724{% else %}#004085{% endif %};
+                           padding: 10px;
+                           border: 1px solid {% if message.tags == 'error' %}#f5c6cb{% elif message.tags == 'success' %}#c3e6cb{% else %}#b8daff{% endif %}; 
+                           border-radius: 5px;
+                           margin-bottom: 10px;">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+    {% endif %}
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
