fixing mobile navigation

--- a/recycling/templates/recycling/index.html
+++ b/recycling/templates/recycling/index.html
@@ -102,14 +102,14 @@
                               <div class="detail-box">
                                  <h1>
                                     <span>
-                                     Earn as you trash
+                                     Earn with your
                                     </span>
                                     <br>
-                                   Nylons with us.
+                                   Nylons wastes.
                                  </h1>
                                  <div class="btn-box">
                                     <a href="{% url "dashboard" %}" class="btn1">
-                                    start recycling now 
+                                    Start now 
                                     </a>
                                  </div>
                               </div>
@@ -124,37 +124,14 @@
                               <div class="detail-box">
                                  <h1>
                                     <span>
-                                    Earn as you trash
+                                    Earn with your
                                     </span>
                                     <br>
-                                    Plastic with us
+                                    Plastic waste
                                  </h1>
                                  <div class="btn-box">
                                     <a href="{% url "dashboard" %}" class="btn1">
-                                    start recycling now 
-                                    </a>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="carousel-item">
-                     <div class="container ">
-                        <div class="row">
-                           <div class="col-md-7 col-lg-6 ">
-                              <div class="detail-box">
-                                 <h1>
-                                    <span>
-                                    Earn as you trash
-                                    </span>
-                                    <br>
-                                    bottles with us.
-                                 </h1>
-                                
-                                 <div class="btn-box">
-                                    <a href="{% url "dashboard" %}" class="btn1">
-                                    start recycling now 
+                                    Start now 
                                     </a>
                                  </div>
                               </div>
@@ -548,7 +525,7 @@
                      </div>
                      <div class="detail-box">
                         <p>
-                          Request pick up via our website/chat with us and we will pickup your wastes from your doorstep on scheduled days.
+                          Request waste pick up via our website/chat with us and a collector agent will pickup from your doorstep on scheduled days.
                         </p>
                      </div>
                   </div>
@@ -570,7 +547,7 @@
                      </div>
                      <div class="detail-box">
                         <p>
-                          Turn-in your plastic wastes with our collector agent nearest to your community/school
+                          Turn-in your plastic wastes with our collector agent nearest to your community/campus/school
                         </p>
                      </div>
                   </div>
